# coviber

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  DATASHEET.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  WHITEPAPER.md  docker-compose.yml  pyproject.toml
.claude/hooks/: session-start.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  loader_request.md
.github/rulesets/: main-branch-protection.json
.github/workflows/: ci.yml
bench/: run.py
bench/results/: embeddings-b5761d2.json  keyword-b5761d2.json
coviber/: __init__.py  cli.py  config.py  mcp_server.py  persona.py  pipeline.py  record.py  store.py  urgency.py  vector_stores.py  workgraph.py
coviber/loaders/: __init__.py  base.py  demo.py  imap.py  jsonl.py  mbox.py  slackexport.py  webscrape.py
examples/: acme_demo.jsonl  scrape_config.example.yaml
paper/: Makefile  README.md  UNRESOLVED.md  references.bib  whitepaper.tex
paper/sections/: abstract-intro.tex  appendix.tex  architecture.tex  discussion.tex  evaluation.tex  mcp-interface.tex  persona.tex  record-loader.tex  related-work.tex  store-vectors.tex  urgency.tex  workgraph.tex
tests/: test_config.py  test_email_loaders.py  test_embedding_index.py  test_mcp_config.py  test_persona.py  test_pipeline.py  test_slackexport_loader.py  test_store_locking.py  test_timestamps.py  test_urgency_contract.py  test_vector_stores.py  test_webscrape_loader.py
